[package]
name = "space-dust"
version = "0.1.0"
edition = "2021"
description = "A comprehensive astrodynamics library for Rust"
license = "MIT"
repository = "https://github.com/Stratogen-Applied-Research/space_dust"
keywords = ["astrodynamics", "satellite", "orbital-mechanics", "sgp4", "tle"]
categories = ["science", "aerospace"]

[dependencies]
sgp4 = "2.3.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
network = ["dep:reqwest"]
full = ["serde", "network"]
